# RsRiscV_emu

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
apps/riscv-tui/: Cargo.toml
apps/riscv-tui/src/: app.rs  cli.rs  error.rs  main.rs  state.rs  ui.rs
apps/riscv-tui/src/event/: key.rs  mod.rs
apps/riscv-tui/src/state/: list_state.rs  snapshot.rs
apps/riscv-tui/src/ui/: key.rs  mod.rs  render.rs  state.rs
apps/riscv-tui/src/ui/component/: exception.rs  instruction.rs  memory.rs  mod.rs
apps/riscv-tui/src/ui/component/mid/: csr.rs  mod.rs  register.rs
apps/riscv-tui/src/ui/popup/: info.rs
crates/riscv-core/: Cargo.toml
crates/riscv-core/src/: debug.rs  error.rs  exception.rs  lib.rs  prelude.rs
crates/riscv-core/src/core/: access.rs  cpu.rs  csr.rs  mmu.rs  mod.rs  pc.rs  privilege.rs  register.rs
crates/riscv-core/src/core/cpu/: debug.rs  tests.rs
crates/riscv-core/src/core/csr/: pmpcfg.rs  tests.rs
crates/riscv-core/src/core/execute/: mod.rs  privilege.rs  rv32i.rs  zicsr.rs
crates/riscv-core/src/core/mmu/: access.rs  sv32.rs  tests.rs  tlb.rs
crates/riscv-core/src/core/mmu/tlb/: entry.rs
crates/riscv-core/src/device/: bus.rs  memory.rs  mod.rs  uart.rs
crates/riscv-core/src/engine/: alu.rs  branch.rs  lsu.rs  mod.rs  sys.rs
crates/riscv-core/src/isa/: decoder.rs  instruction.rs  mod.rs  opcode.rs  types.rs
crates/riscv-core/src/isa/instruction/: zicsr.rs  zifencei.rs
crates/riscv-core/tests/: rv32mi_p_test.rs  rv32si_p_test.rs  rv32ui_p_test.rs  rv32um_p_test.rs
crates/riscv-decoder/: Cargo.toml
crates/riscv-decoder/src/: csr_addr.rs  decoder.rs  error.rs  instruction.rs  lib.rs  opcode.rs
crates/riscv-decoder/src/instruction/: privileged.rs  rv32i.rs  zicsr.rs  zifencei.rs
crates/riscv-decoder/tests/: rv32im_test.rs  system_test.rs
crates/riscv-disasm/: Cargo.toml
crates/riscv-disasm/src/: disasm.rs  instructions.rs  lib.rs
crates/riscv-loader/: Cargo.toml
crates/riscv-loader/src/: error.rs  lib.rs  load_info.rs  loader.rs
crates/riscv-loader/src/loader/: binary.rs  elf.rs
src/: lib.rs  main.rs  riscv.rs
src/riscv/: instruction.rs  loader.rs  memory.rs  opcode.rs  parser.rs  pc.rs  register.rs
src/ui/: state.rs  terminal.rs
src/utils/: exception.rs
