[package]
name = "riscv-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = []

m = ["riscv-core/m", "riscv-disasm/m"]
zicsr = ["riscv-core/zicsr", "riscv-disasm/zicsr"]
zifencei = ["riscv-core/zifencei", "riscv-disasm/zifencei"]

s = ["riscv-core/s", "riscv-disasm/s"]

full = ["s", "m", "zicsr", "zifencei"]

[dependencies]
riscv-core = {workspace = true}
riscv-loader = {workspace = true}
riscv-disasm = {workspace = true}

crossterm = "0.29.0"
ratatui = {version = "0.30.0", features = ["crossterm"]}

thiserror = "2"
anyhow = "1"

