[package]
name = "riscv-disasm"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = []

m = ["riscv-decoder/m"]
zicsr = ["riscv-decoder/zicsr"]
zifencei = ["riscv-decoder/zifencei"]

std = ["m", "zicsr", "zifencei"]

[dependencies]
riscv-loader = {workspace = true}
riscv-decoder = {workspace = true}

thiserror = "2"
